FINISH 2 LAST TEST OF 6